Updated by task 'FY24_August_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/4bf45500675b9bc95ad5f84cb650be0953943087

--- a/c-legacy-releases/2024/07172024.md
+++ b/c-legacy-releases/2024/07172024.md
@@ -1,14 +1,14 @@
 ---
-title: 版本注意事項 - 2024 年 7 月
+title: 發行說明 - 2024 年 7 月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: July 2024
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: 00f5a65b87530447c95c9832a8754c5cb484fa34
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '3309'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -31,7 +31,7 @@ ht-degree: 99%
 
 ## 2024 年 7 月
 
-最新更新： **2024年8月2日**
+上次更新日期：**2024 年 8 月 2 日**
 
 * [[!DNL Experience League] 活動與最新訊息](#events)
 * [[!DNL Adobe System Status]](#status)
@@ -393,8 +393,8 @@ New or updated videos tutorials published for Adobe Campaign.
 
 * [!DNL Campaign] Web 介面：[新增內容](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/whats-new) - [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/campaign-web-home)
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/new/whats-new) - [實作指南](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/config/implement/implement)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-notes) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard-learn/tutorials/overview) - [發行規劃](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-planning) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/documentation-updates)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/campaign-classic-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/latest-release) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic-learn/tutorials/overview) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/documentation-updates)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard-learn/tutorials/overview) - [發行規劃](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-planning) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/documentation-updates)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/campaign-classic-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/latest-release) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic-learn/tutorials/overview) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/documentation-updates)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/zh-hant/docs/control-panel/using/control-panel-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/control-panel/using/release-notes/release-notes) - [操作方法影片](https://experienceleague.adobe.com/zh-hant/docs/control-panel-learn/tutorials/control-panel-overview)
 
 +++
@@ -425,7 +425,7 @@ New or updated videos tutorials published for Adobe Campaign.
 ### [!DNL Journey Optimizer] 的更多資源
 
 * [[!DNL Journey Optimizer] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/ajo-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/overview)
-* [決策管理文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/decisioning/offer-decisioning/get-started-decision/starting-offer-decisioning) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/documentation-updates)
+* [決策管理文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/decisioning/offer-decisioning/get-started-decision/starting-offer-decisioning) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/documentation-updates)
 
 +++
 
