Updated by task 'FY24_September_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/4c6cf29dff0da7b5640ce0186f76e6ca8728a14f

--- a/c-legacy-releases/2024/09142023.md
+++ b/c-legacy-releases/2024/09142023.md
@@ -1,14 +1,14 @@
 ---
-title: 版本注意事項 - 2024 年 8 月
+title: 發行說明 - 2024 年 8 月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: August 2024
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: 356b0a6cdb0de2b19bdb9d64556bcf80e91faffa
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '3068'
-ht-degree: 92%
+ht-degree: 100%
 
 ---
 
@@ -25,23 +25,23 @@ ht-degree: 92%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)庫、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 **提供意見回饋**
 
-尋找&#x200B;**_此內容是否有幫助？每頁底部有_**&#x200B;個快顯視窗。 您的意見反應已經過組織並傳送給內容作者。
+請在每個頁面底部的快顯視窗搜尋「**_此內容是否實用？_**」。您的意見回饋會經過剪輯並傳送給內容作者。
 
-**取得通知**
+**接收通知**
 
-若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
+若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
 ## 2024 年 8 月
 
-最新更新： **2024年9月10日**
+上次更新日期：**2024 年 9 月 10 日**
 
-* [[!DNL Experience League]  活動與最新訊息](#events)
+* [[!DNL Experience League] 活動與最新訊息](#events)
 * [[!DNL Adobe System Status]](#status)
-* [[!DNL Adobe Experience Cloud]  — 中央介面和管理](#ecloud)
+* [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
 * [[!DNL Adobe Real-Time Customer Data Platform]](#rtcdp)
 * [[!DNL Adobe Analytics]](#analytics)
@@ -71,22 +71,22 @@ ht-degree: 92%
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
-### Experience League播放清單（最新！）
+### Experience League 的播放清單 (新功能！)
 
-Experience League中有新影片[播放清單](https://experienceleague.adobe.com/en/playlists)。 播放清單是經過組織的影片集合，旨在快速協助您取得想要的技能和知識。
+Experience League 提供新影片[播放清單](https://experienceleague.adobe.com/zh-hant/playlists)。播放清單是精選的影片集，旨在協助您快速獲得所需的技能和知識。
 
 播放清單功能包括：
 
 * 自動播放影片
-* 章節選取和播放速度
-* 從您中斷的地方繼續
-* 影片成績單
+* 章節選擇和播放速度
+* 從上次停止的地方繼續
+* 影片文字記錄
 
-若要瀏覽播放清單，請瀏覽至&#x200B;**[!UICONTROL 學習]** > **[!UICONTROL 瀏覽所有播放清單]**。
+若要瀏覽播放清單，請導覽至「**[!UICONTROL 學習]** > **[!UICONTROL 瀏覽所有播放清單]**」。
 
 >[!NOTE]
 >
->**個課程**&#x200B;正在從Experience League中淘汰。 如果您為課程建立書籤，系統會將您重新導向至對應的播放清單（若有的話）。 某些情況下，您可能需要瀏覽至涵蓋您尋找之主題的新播放清單。
+>**課程**&#x200B;將從 Experience League 中淘汰。如果已對課程建立書籤，系統會將您重新導向至對應的播放清單 (如果存在)。在某些情況下，您可能需要瀏覽涵蓋要尋找之主題的新播放清單。
 
 ### Experience League 活動
 
@@ -104,18 +104,18 @@ Experience League中有新影片[播放清單](https://experienceleague.adobe.co
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-發行日期： **2024年8月19日**
+發行日期：**2024 年 8 月 19 日**
 
-**新增功能**
+**最新資訊**
 
-* 產品型維護通知、錯誤修正和改良
+* 以產品為依據的維護通知、錯誤修正和改善項目
 
 | 功能 | 說明 |
 | ------- | ------- |
-| 以產品為基礎的維護 | <ul><li>增強UI和每個產品的通知，而非每次維護。</li><li>每次更新的影響屬性都會提供產品特定的影響詳細資訊。</li></ul> |
-| 錯誤修正和改良 | <ul><li>_如何訂閱_&#x200B;說明頁面本地化。</li><li>已在Slack設定指示頁面上新增支援聯絡資訊。</li><li>修正未使用狀態API依事件狀態正確篩選之未預期事件的錯誤。</li></ul> |
+| 以產品為依據的維護 | <ul><li>依據產品提升使用者介面和通知，而不是依據維護。</li><li>每個更新屬性的影響屬性都會提供該影響的產品特定詳細資料。</li></ul> |
+| 錯誤修正和改善項目 | <ul><li>_如何訂閱_&#x200B;說明頁面本地化。</li><li>在 Slack 設定說明頁面上新增支援聯絡資訊。</li><li>修正使用狀態 API 未依照事件狀態正確篩選事件的錯誤。</li></ul> |
 
-如需最新的發行說明，請參閱：
+如需最新發行說明，請參閱：
 
 * [2024 年 5 月 15 日](https://experienceleague.adobe.com/zh-hant/docs/release-notes/experience-cloud/previous/2024/05152024#status)
 * [2024 年 1 月 30 日](https://experienceleague.adobe.com/zh-hant/docs/release-notes/experience-cloud/previous/2024/02142024#status)
@@ -132,11 +132,11 @@ Experience League中有新影片[播放清單](https://experienceleague.adobe.co
 
 +++詳細資訊
 
-發行日期： **2024年9月10日**
+發行日期：**2024 年 9 月 10 日**
 
 | 功能 | 說明 |
 | -----------| ---------- |
-| Slack通知 | 您可以設定帳戶偏好設定，以傳送Experience Cloud通知給Slack。 如需詳細資訊，請參閱[訂閱Slack通知](https://experienceleague.adobe.com/en/docs/core-services/interface/features/account-preferences)。 |
+| Slack 通知 | 您可以設定帳戶偏好，以便傳送 Experience Cloud 通知至 Slack。請參閱[訂閱 Slack 通知](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/account-preferences)以了解詳細資料。 |
 
 有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
@@ -406,9 +406,9 @@ New articles and updates to existing articles for [!DNL Campaign].
 
 ### [!DNL Campaign] 說明資源
 
-* [!DNL Web User Interface]： **9月3日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品檔案](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
+* [!DNL Web User Interface]：**9 月 3 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
 
-* [!DNL Campaign] v8： **9月3日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/releases/release-notes) | [產品檔案](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
+* [!DNL Campaign]v8：**9 月 3 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/releases/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
 
 * [!DNL Campaign Classic] v7：[發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/latest-release) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/campaign-classic-home)
 
