Updated by task 'FY24_October_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/1e26c1a450f5ddc45f49d3b6d5aaa85f9cbf008c

--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -26,7 +26,7 @@ ht-degree: 100%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/)庫、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
@@ -129,7 +129,7 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -139,7 +139,7 @@ ht-degree: 100%
 
 {style="table-layout:auto"}
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -169,7 +169,7 @@ ht-degree: 100%
 | 2023 年 12 月  | 資料收集 | [建立資料流](https://experienceleague.adobe.com/docs/platform-learn/implement-mobile-sdk/initial-configuration/create-datastream.html) | 影片 | 了解如何在 Experience Platform 中建立資料流。 |
 | 2023 年 12 月  | 資料收集 | [設定標記屬性](https://experienceleague.adobe.com/docs/platform-learn/implement-mobile-sdk/initial-configuration/configure-tags.html) | 影片 | 了解如何在[!UICONTROL 資料收集]介面中設定標記屬性。 |
 | 2023 年 12 月  | 資料收集 | [安裝 Adobe Experience Platform Mobile SDK](https://experienceleague.adobe.com/docs/platform-learn/implement-mobile-sdk/app-implementation/install-sdks.html) | 文章 | 了解如何在行動應用程式中實作 Adobe [!DNL Experience Platform Mobile SDK]。 |
-| 2023 年 12 月  | 設定檔 | [建立購買總和的計算屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/profiles/create-a-computed-attribute-for-sum-of-purchases.html) | 影片 | 了解如何使用計算屬性來加總使用者在多個銷售管道中購買的金額。 |
+| 2023 年 12 月  | 輪廓 | [建立購買總和的計算屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/profiles/create-a-computed-attribute-for-sum-of-purchases.html) | 影片 | 了解如何使用計算屬性來加總使用者在多個銷售管道中購買的金額。 |
 | 2023 年 12 月  | 資料收集 | [建立標記屬性](https://experienceleague.adobe.com/docs/platform-learn/data-collection/tags/create-a-property.html)。 | 更新的影片 | 了解如何建立標記屬性以管理網站上的行銷標記。 |
 
 {style="table-layout:auto"}
@@ -180,9 +180,9 @@ ht-degree: 100%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 12 月  | [[!DNL AEP] - [!DNL TARGET] 對象 - 在  [!DNL AEP] 中單次啟動後，所有  [!DNL Target]  對象的修改日期都會變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23223.html) | 新文章 | 了解為什麼您可能會看到在 [!DNL Adobe Experience Platform] 中啟動單一區段後，[!DNL Target] 目的地 ([!DNL Target UI] 內) 中所有已啟動區段的修改日期都會發生變化。 |
-| 2023 年 12 月  | [[!DNL AEP] - 當來源綱要不符合 [!DNL XDM] 時，串流設定檔更新會失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23026.html) | 新文章 | 了解當串流傳輸設定檔「[!DNL upsert]」時，如果來源綱要不符合 [!DNL XDM]，則資料流會失敗。 |
-| 2023 年 12 月  | [[!DNL AEP] - 授權使用區段中的可尋址對象與首頁中的設定檔計數不相符](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23025.html) | 新文章 | 瞭解授權使用區段中的可尋址對象何時與首頁中的設定檔計數不相符。 |
+| 2023 年 12 月  | [[!DNL AEP] - [!DNL TARGET] 客群 - 在  [!DNL AEP] 中單次啟動後，所有  [!DNL Target]  客群的修改日期都會變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23223.html) | 新文章 | 了解為什麼您可能會看到在 [!DNL Adobe Experience Platform] 中啟動單一區段後，[!DNL Target] 目的地 ([!DNL Target UI] 內) 中所有已啟動區段的修改日期都會發生變化。 |
+| 2023 年 12 月  | [[!DNL AEP] - 當來源綱要不符合 [!DNL XDM] 時，串流輪廓更新會失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23026.html) | 新文章 | 了解當串流傳輸輪廓「[!DNL upsert]」時，如果來源綱要不符合 [!DNL XDM]，則資料流會失敗。 |
+| 2023 年 12 月  | [[!DNL AEP] - 授權使用區段中的可尋址客群與首頁中的輪廓計數不相符](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23025.html) | 新文章 | 瞭解授權使用區段中的可尋址客群何時與首頁中的輪廓計數不相符。 |
 
 {style="table-layout:auto"}
 
@@ -269,7 +269,7 @@ ht-degree: 100%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 12 月  | [尋找和設定檔資料的 CJA 尋找](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/cja-lookup-data.html?lang=zh-Hant) | 影片 | 了解如何新增尋找資料以尋找和分析資料集，以及規劃和對應關鍵欄位。 |
+| 2023 年 12 月  | [尋找和輪廓資料的 CJA 尋找](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/cja-lookup-data.html?lang=zh-Hant) | 影片 | 了解如何新增尋找資料以尋找和分析資料集，以及規劃和對應關鍵欄位。 |
 
 {style="table-layout:auto"}
 
@@ -362,7 +362,7 @@ _早期採用者計劃_
 
 * **[將[!UICONTROL 調適型表單]提交到 Adobe  [!DNL Workfront]  Fusion 情境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/services/submit-adaptive-form-to-workfront-fusion.html?lang=zh-Hant)**：Forms as a Cloud Service 提供開箱即用的選項，可輕鬆將[!UICONTROL 調適型表單]與 Adobe [!DNL Workfront] 連接。此連線簡化了將[!UICONTROL 調適型表單]提交到 Adobe [!DNL Workfront] 情境的程序，讓您在提交[!UICONTROL 調適型表單]時觸發 [!DNL Workfront] Fusion 情境。
 
-* **[從右至左語言支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/supporting-new-language-localization-core-components.html?lang=zh-Hant)** - 以核心元件為主的[!UICONTROL 調適型表單]現在可以呈現從右至左 (RTL) 語言 (如阿拉伯文、波斯文和烏都文)。全球有超過 20 億人使用 RTL 語言。使用 RTL 語言的表單可讓您擴展調適型表單的範圍，以滿足這些不同的受眾並選擇進入 RTL 市場。在某些地區，法律也強制要求以當地語言提供表單。透過適應當地語言，您可以向更廣泛的對象敞開大門，並確保遵守相關法律和法規。
+* **[從右至左語言支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/supporting-new-language-localization-core-components.html?lang=zh-Hant)** - 以核心元件為主的[!UICONTROL 調適型表單]現在可以呈現從右至左 (RTL) 語言 (如阿拉伯文、波斯文和烏都文)。全球有超過 20 億人使用 RTL 語言。使用 RTL 語言的表單可讓您擴展調適型表單的範圍，以滿足這些不同的客群並選擇進入 RTL 市場。在某些地區，法律也強制要求以當地語言提供表單。透過適應當地語言，您可以向更廣泛的客群敞開大門，並確保遵守相關法律和法規。
 
 * **[使用 DocAssurance API (通訊 API 的一部分) 保護您的文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/using-communications/aem-forms-cloud-service-communications-introduction.html?lang=zh-Hant#document-assurance-doc-assurance)** - [!DNL DocAssurance] API 可讓您透過在文件上簽名和加密來保護敏感資訊。透過加密，文件內容會轉換為無法讀取的格式，確保只有授權的使用者才能存取。這個強化的保護層不僅可以防止未經授權的人士檢視珍貴資料，也可讓您感到安心。簽名 API 可讓您的組織保護所分發和接收之 Adobe PDF 文件的安全性和隱私權。此服務會使用數位簽名和認證，以確保只有預期的收件者才能修改文件。
 
@@ -388,7 +388,7 @@ _CDN 設定早期採用者計劃_
 
 _新功能_
 
-* [Cloud Manager 自訂權限](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/custom-permissions.html?lang=zh-Hant)可讓您以可設定的權限建立自訂權限設定檔，以限制 [!DNL Cloud Manager] 使用者對方案、管道和環境的存取。
+* [Cloud Manager 自訂權限](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/custom-permissions.html?lang=zh-Hant)可讓您以可設定的權限建立自訂權限輪廓，以限制 [!DNL Cloud Manager] 使用者對方案、管道和環境的存取。
    * 此功能將分階段推出，預計在 2024 年 2 月 Cloud Manager 版本發布時完成。
    * 如果您想盡快啟用，請使用與您 Adobe ID 相關聯的電子郵件傳送一封電子郵件至 [Grp-CloudManager-custom-permissions@adobe.com](mailto:Grp-CloudManager-custom-permissions@adobe.com)。
 * 建置容器現在支援[前端管道](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/developing-with-front-end-pipelines.html?lang=zh-Hant)的 Node.js 版本 18。
@@ -624,8 +624,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
@@ -657,7 +657,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 12 月  | [ [!DNL AJO]  電子郵件追蹤資料中的點擊量不準確](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23027.html) | 新文章 | 了解電子郵件追蹤資料出現差異的可能原因之一。 |
-| 2023 年 12 月  | [區段未評估設定檔，但  [!DNL Journey]  仍然發送了電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22975.html) | 新文章 | 了解即使 [!DNL Segment] 尚未評估任何設定檔，[!DNL Journey] 是否也會發送電子郵件。 |
+| 2023 年 12 月  | [區段未評估輪廓，但  [!DNL Journey]  仍然發送了電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22975.html) | 新文章 | 了解即使 [!DNL Segment] 尚未評估任何輪廓，[!DNL Journey] 是否也會發送電子郵件。 |
 | 2023 年 12 月  | [[!DNL AJO] - `now()` 時間戳記在毫秒中加入額外的數字](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22978.html) | 新文章 | 了解當 `now()` 時間戳在毫秒中添加額外數字時如何解決匯入檔案的問題。 |
 
 {style="table-layout:auto"}
@@ -740,7 +740,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 12 月  | [[!DNL Workfront]：套用版面配置範本](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html) | 新文章 | 了解如何透過四種方式套用版面配置範本：[!UICONTROL 使用者個人資料]、[!UICONTROL 工作角色]、[!UICONTROL 主團隊]和[!UICONTROL 主群組]。 |
+| 2023 年 12 月  | [[!DNL Workfront]：套用版面配置範本](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html) | 新文章 | 了解如何透過四種方式套用版面配置範本：[!UICONTROL 使用者輪廓]、[!UICONTROL 工作角色]、[!UICONTROL 主團隊]和[!UICONTROL 主群組]。 |
 | 2023 年 12 月  | [[!DNL Workfront]：無法產生校訂](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html) | 新文章 | 了解如何解決上傳新校訂時出現的 `Proof Failed to Generate` 錯誤。 |
 | 2023 年 12 月  | [[!DNL Fusion]：`Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html) | 新文章 | 了解如何解決 [!DNL Workfront Fusion]錯誤，`Failed to verify connection '52174'. Status Code Error: 500`。 |
 | 2023 年 12 月  | [[!DNL Workfront]：匯出卡住](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html) | 新文章 | 了解如果 [!UICONTROL Kick-start] 匯出或 [!UICONTROL Resource Planner] 匯出卡住時如何解決問題。 |
