--- a/c-legacy-releases/2024/09142023.md
+++ b/c-legacy-releases/2024/09142023.md
@@ -128,7 +128,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -345,7 +345,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2024 年 7 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.48 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 | 2024 年 7 月 | [移難排解  [!DNL Encryption Key]  輪換： [!DNL CVE-2024-34102]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/troubleshooting-encryption-key-rotation-cve-2024-34102) | 新文章 | 本文旨在協助商家解決在執行本文 [!DNL CVE-2024-34102] 步驟後出現的 [!DNL encryption key] 輪換狀況。 |
 | 2024 年 7 月 | [整合環境效能不佳](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/poor-performance-in-integration-environments) | 新文章 | 了解當 [!DNL Pro integration] 環境和 [!DNL Starter staging] 環境效能不佳時，該如何解決。 |
-| 2024 年 7 月 | [客戶設定檔未出現在  [!DNL Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/data-connection-customer-profiles-not-exported) | 新文章 | 了解如果使用 [!DNL Data Connection] 擴充功能時客戶設定檔資料未出現在 [!DNL Experience Platform]，該進行的疑難排解步驟。 |
+| 2024 年 7 月 | [客戶輪廓未出現在  [!DNL Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/data-connection-customer-profiles-not-exported) | 新文章 | 了解如果使用 [!DNL Data Connection] 擴充功能時客戶輪廓資料未出現在 [!DNL Experience Platform]，該進行的疑難排解步驟。 |
 | 2024 年 7 月 | [[!DNL Live Search] 儀表板和搜尋結果排名不正確](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/live-search-dashboard-ranking-incorrect) | 新文章 | 了解當您發現 [!DNL Live Search] 儀表板顯示的資料不正確或搜尋結果的排名未如預期，該如何解決。 |
 
 +++
@@ -360,7 +360,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 7 月 | 使用  [!DNL Postman] 時 [[!DNL Adobe Target] 大量設定檔更新 [!DNL API]  擲回 *[!DNL Unexpected Error]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281) | 新文章 | 了解如何解決此問題：執行 [!DNL Target Bulk Profile Update API] 時會在 [!DNL Postman] 中擲回 *[!DNL Unexpected Error]* 訊息。 |
+| 2024 年 7 月 | 使用  [!DNL Postman] 時 [[!DNL Adobe Target] 大量輪廓更新 [!DNL API]  擲回 *[!DNL Unexpected Error]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281) | 新文章 | 了解如何解決此問題：執行 [!DNL Target Bulk Profile Update API] 時會在 [!DNL Postman] 中擲回 *[!DNL Unexpected Error]* 訊息。 |
 
 * 如需搶鮮版資訊，請參閱 [[!DNL Adobe Target]  搶鮮版](https://experienceleague.adobe.com/zh-hant/docs/target/using/release-notes/target-release-notes)
 * 如需目前版本資訊，請參閱 [[!DNL Adobe Target]  發行說明](https://experienceleague.adobe.com/zh-hant/docs/target/using/release-notes/release-notes)
