--- a/c-legacy-releases/2024/05152024.md
+++ b/c-legacy-releases/2024/05152024.md
@@ -26,7 +26,7 @@ ht-degree: 100%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)庫、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
@@ -124,7 +124,7 @@ ht-degree: 100%
 
 | 功能 | 說明 |
 | ------- | ------- |
-| 訂閱說明頁面 | <ul><li>專門的說明頁面可指引新訂閱者設定其主動通知設定檔和偏好設定。</li><li>「Adobe Status 概觀頁面 > 說明」選單有一個指向此新頁面的新選單項目 ([!UICONTROL 如何訂閱])。</li><li>所有與 [!DNL Adobe Status] 訂閱有關的 Adob&#x200B;&#x200B;e 表層頁面現在都指向新的說明頁面。</li></ul> |
+| 訂閱說明頁面 | <ul><li>專門的說明頁面可指引新訂閱者設定其主動通知輪廓和偏好設定。</li><li>「Adobe Status 概觀頁面 > 說明」選單有一個指向此新頁面的新選單項目 ([!UICONTROL 如何訂閱])。</li><li>所有與 [!DNL Adobe Status] 訂閱有關的 Adob&#x200B;&#x200B;e 表層頁面現在都指向新的說明頁面。</li></ul> |
 | 通知改善項目 | <ul><li>透過電子郵件和 Slack 改善了 CSO 關閉通知</li></ul> |
 | 錯誤修正 | <ul><li>在 Adobe Connect、Adobe Marketo 和 Adob&#x200B;&#x200B;e Sign 產品頁面上提供更好的環境篩選器。</li><li>點選 40 天歷史網格即可顯示相應的日期以及當天的相關事件。</li><li>介面改善項目</li></ul> |
 
@@ -140,13 +140,13 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
 未更新。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -171,7 +171,7 @@ ht-degree: 100%
 | 2024 年 5 月 | [!DNL Experience Platform] | [為 [!DNL Experience Platform] 開發的應用程式](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/intro-to-platform/native-applications) | 影片 | 了解原本為 Adob&#x200B;&#x200B;e Experience Platform 建立的應用程式：Customer Journey Analytics、Real-Time Customer Data Platform、[!DNL Journey Optimizer]和 Mix Modeler。 |
 | 2024 年 5 月 | [!DNL Experience Platform]、[!DNL Journey Optimizer] | [使用 Web SDK 設定 [!DNL Journey Optimizer] Web 頻道](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/applications-setup/setup-web-channel) | 文章 | 了解如何使用 Adobe Experience Platform Web SDK 實施 Adobe [!DNL Journey Optimizer] 網頁管道。 |
 | 2024 年 5 月 | [!DNL Experience Platform]、[!DNL Journey Optimizer] | [使用 Platform Web SDK 設定決策管理](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/applications-setup/setup-decision-management) | 文章 | 了解如何使用 Platform Web SDK 實施 Adob&#x200B;&#x200B;e [!DNL Journey Optimizer] 的決策管理功能。 |
-| 2024 年 5 月 | [!DNL Experience Platform] | [匿名設定檔和體驗事件過期](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/data-hygiene/pseudonymous-profile-and-event-expiration) | 影片 | 了解如何在 Experience Platform 中設定匿名設定檔和事件的過期設定及其優點。 |
+| 2024 年 5 月 | [!DNL Experience Platform] | [匿名輪廓和體驗事件過期](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/data-hygiene/pseudonymous-profile-and-event-expiration) | 影片 | 了解如何在 Experience Platform 中設定匿名輪廓和事件的過期設定及其優點。 |
 | 2024 年 5 月 | 資料收集[!DNL Experience Platform] | [堆疊標記規則](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/data-collection/tags/stack-rules) | 影片 | 了解如何堆疊如何規定標記屬性。規則堆疊會使用標記規則事件中的順序功能進行規則排序，以便您可以管理可擴展的標記實施。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [設定資料流](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-datastream) | 文章 | 了解如何在 Adobe Experience Platform Web SDK 中設定資料流。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [為 Web 資料建立 XDM 架構](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-schemas) | 文章 | 了解如何在 Adob&#x200B;&#x200B;e Experience Platform Data Collection 介面中為 Web 資料建立 XDM 架構。 |
@@ -412,7 +412,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2024 年 4 月 | [解決在 [!UICONTROL CSP 限制模式]中建立訂單頁面的疑難問題](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/payments/admin-create-order-page-in-csp-restricted-mode) | 新文章 | 了解在[!UICONTROL 管理]側 ([!UICONTROL CSP 限制模式]已&#x200B;*「啟用」*) 建立訂單時 Adobe Commerce 2.4.7 問題的說明和修復，以及在瀏覽器控制台記錄中 &quot;`Refused to execute inline script because it violates the following Content Security Policy directive: "script-src …`&quot; 錯誤訊息的說明和修復。 |
 | 2024 年 4 月 | [解決在 [!UICONTROL CSP 限制模式]中店面結帳頁面的疑難問題](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/payments/storefront-checkout-page-in-csp-restricted-mode) | 新文章 | 了解查看結帳頁面 (在 [!UICONTROL  CSP 限制模式]中) 時 Adob&#x200B;&#x200B;e Commerce 2.4.7 問題的說明和修復，以及瀏覽器控制台記錄中 `Refused to execute inline script because it violates the following Content Security Policy directive: "script-src …` 錯誤訊息的說明和修復。 |
 | 2024 年 4 月 | [如何取得並套用安全性修補程式](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/how-to/how-to-obtain-and-apply-security-patches) | 新文章 | 了解有關如何取得並套用已發佈的安全性修補程式說明，但有關說明並未提供。 |
-| 2024 年 4 月 | [如何更新雲端帳戶的設定檔](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/how-to/how-to-update-the-cloud-account-profile) | 新文章 | 了解關於如何修改雲端帳戶設定檔的步驟。 |
+| 2024 年 4 月 | [如何更新雲端帳戶的輪廓](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/how-to/how-to-update-the-cloud-account-profile) | 新文章 | 了解關於如何修改雲端帳戶輪廓的步驟。 |
 
 {style="table-layout:auto"}
 
@@ -483,8 +483,8 @@ New or updated videos tutorials published for Adobe Campaign.
 
 * [!DNL Campaign] Web 介面：[新增內容](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/whats-new) - [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/campaign-web-home)
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/new/whats-new) - [實作指南](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/config/implement/implement)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-notes) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard-learn/tutorials/overview) - [發行規劃](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-planning) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/documentation-updates)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/campaign-classic-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/latest-release) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic-learn/tutorials/overview) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/documentation-updates)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard-learn/tutorials/overview) - [發行規劃](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-planning) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/documentation-updates)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/campaign-classic-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/latest-release) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic-learn/tutorials/overview) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-classic/using/release-notes/documentation-updates)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/zh-hant/docs/control-panel/using/control-panel-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/control-panel/using/release-notes/release-notes) - [操作方法影片](https://experienceleague.adobe.com/zh-hant/docs/control-panel-learn/tutorials/control-panel-overview)
 
 +++
@@ -505,7 +505,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2024 年 5 月 | [建立動作](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/configuration/journey-configuration/create-actions) | 影片 | 瞭解什麼是動作、如何使用 [!DNL Journey Optimizer] 的編輯設定檔及跳轉動作，以及如何設定自訂動作。 |
+| 2024 年 5 月 | [建立動作](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/configuration/journey-configuration/create-actions) | 影片 | 瞭解什麼是動作、如何使用 [!DNL Journey Optimizer] 的編輯輪廓及跳轉動作，以及如何設定自訂動作。 |
 | 2024 年 5 月 | [使用訊息編輯器匯入及編寫 HTML 電子郵件內容](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/email-channel/import-and-author-html-email-content) | 影片 | 瞭解如何匯入現有的 HTML 內容、調整設計、新增鏡像頁面和取消訂閱連結，以及如何編寫內容的程式碼。 |
 | 2024 年 5 月 | [設定簡訊 API 憑證及管道表面](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/configuration/channel-configuration/configure-mms-api-credentials-and-channel-surfaces) | 影片 | 瞭解如何將 [!DNL Journey Optimizer] 連線至多媒體簡訊服務提供者，以及如何建立簡訊頻道介面。 |
 | 2024 年 5 月 | [建立以程式碼為主的體驗活動](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/code-based-experience-channel/create-a-code-based-experience-campaign) | 影片 | 了解如何建立以程式碼為主的體驗活動，透過支援伺服器端、基於 API 或基於 SDK 的實施方法來擴展個人化，進而與開發環境無縫整合。 |
@@ -514,7 +514,7 @@ New or updated videos tutorials published for Adobe Campaign.
 ### [!DNL Journey Optimizer] 的更多資源
 
 * [[!DNL Journey Optimizer] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/ajo-home) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/overview)
-* [決策管理文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/decisioning/offer-decisioning/get-started-decision/starting-offer-decisioning) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [操作說明影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/documentation-updates)
+* [決策管理文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/decisioning/offer-decisioning/get-started-decision/starting-offer-decisioning) - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes) - [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/documentation-updates)
 
 +++
 
