--- a/c-legacy-releases/2024/07172024.md
+++ b/c-legacy-releases/2024/07172024.md
@@ -5,7 +5,8 @@ doc-type: release notes
 last-update: July 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 00f5a65b87530447c95c9832a8754c5cb484fa34
+exl-id: 86c96f2a-3fb7-4724-9cbd-308b9ec06f1d
+source-git-commit: 000f2b982eb85d2db50d10c6afac109a2399d538
 workflow-type: ht
 source-wordcount: '3309'
 ht-degree: 100%
@@ -25,7 +26,7 @@ ht-degree: 100%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)庫、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
@@ -80,7 +81,7 @@ ht-degree: 100%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-如需最新的發行說明，請參閱：
+如需最新發行說明，請參閱：
 
 * [2024 年 5 月 15 日](https://experienceleague.adobe.com/zh-hant/docs/release-notes/experience-cloud/previous/2024/05152024#status)
 * [2024 年 1 月 30 日](https://experienceleague.adobe.com/zh-hant/docs/release-notes/experience-cloud/previous/2024/02142024#status)
@@ -93,13 +94,13 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
 未更新。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -121,7 +122,7 @@ ht-degree: 100%
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2024 年 7 月 | [!DNL Experience Platform]、[!DNL Real-Time CDP]、[!DNL Journey Optimizer]、[!DNL Customer Journey Analytics] | [AI 助理](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/admin/ai-assistant) | 影片 | 了解您可以在 Adobe Experience Platform 應用程式 (例如 Real-Time Customer Data Platform、Journey Optimizer 和 Customer Journey Analytics) 中使用 AI 助理執行哪些操作。 |
 | 2024 年 7 月 | [!DNL Experience Platform] | [刪除資料集和批次](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/data-hygiene/delete-datasets-and-batches) | 影片 | 了解如何在 Adobe Experience Platform 中刪除資料集和批次。 |
-| 2024 年 7 月 | [!DNL Experience Platform] | [刪除設定檔](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/profiles/delete-profiles) | 影片 | 了解如何使用即時客戶設定檔 API 從設定檔存放區中刪除資料。 |
+| 2024 年 7 月 | [!DNL Experience Platform] | [刪除輪廓](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/profiles/delete-profiles) | 影片 | 了解如何使用即時客戶輪廓 API 從輪廓存放區中刪除資料。 |
 | 2024 年 7 月 | [!DNL Experience Platform] | [設定客戶自控金鑰 (CMK)](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/privacy/set-up-customer-managed-keys) | 影片 | 使用您自己的加密金鑰管理閒置資料加密。 |
 
 {style="table-layout:auto"}
